--- a/test3/Dockerfile
+++ b/test3/Dockerfile
@@ -4,6 +4,8 @@ RUN apk add --no-cache python3-dev \
 && pip3 install --upgrade pip
 
 ENV URI "mongodb+srv://testdb:aCw14lPb6QTfW3dl@cluster0.fxzchei.mongodb.net/?retryWrites=true&w=majority"
+ENV USERS_ENDPOINT "http://172.17.0.3:3001/users"
+ENV COMICS_ENDPOINT "http://172.17.0.2:3000/searchComics/"
 
 WORKDIR /WORKDIR
 ADD . /WORKDIR
