--- a/test3/requirements.txt
+++ b/test3/requirements.txt
@@ -1,16 +1,13 @@
-attrs==22.2.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
+dnspython==2.3.0
 Flask==2.2.2
 idna==3.4
-install==1.3.5
 itsdangerous==2.1.2
 Jinja2==3.1.2
-jsonmerge==1.9.0
-jsonschema==4.17.3
 MarkupSafe==2.1.2
-pyrsistent==0.19.3
+pymongo==4.3.3
 requests==2.28.2
 urllib3==1.26.14
 Werkzeug==2.2.2
